tests/invalid_typecheck/test_tc_invoke_int_var.aphi
/*
Type-check error: Cannot invoke 'x' because it is of type int, not a procedure.
Tries to invoke an int variable.
*/

int x;

procedure main {
    x = 5;
    invoke x;
}
